--- a/TastenRekorder/TastenRekorder.vcxproj
+++ b/TastenRekorder/TastenRekorder.vcxproj
@@ -143,6 +143,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Base64.h" />
     <ClInclude Include="Helper.h" />
     <ClInclude Include="KeyConstants.h" />
     <ClInclude Include="stdafx.h" />
