--- a/TastenRekorder/TastenRekorder.vcxproj.filters
+++ b/TastenRekorder/TastenRekorder.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Helper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Base64.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
